--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ body {
     justify-content: center;
     min-width: 40px;
     height: 40px;
+    position: relative; /* 添加相对定位 */
 }
 
 .gear-btn:hover {
