修复方向键布局 - 移除无效的center区域，实现真正的十字形D-pad

--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ body {
     display: grid;
     grid-template-areas: 
         ". up ."
-        "left center right"
+        "left . right"
         ". down .";
     grid-template-columns: 60px 60px 60px;
     grid-template-rows: 60px 60px 60px;
